dark mode fix 1

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -21,10 +21,12 @@ nav{
 
   .nav {
     width: 100%;
-    height: 100vh; /* 100% of the viewport height */
+    height: auto; /* 100% of the viewport height */
     display: flex; /* Use flexbox for layout */
-    flex-direction: column; /* Arrange children vertically */
-    
+    flex-direction: row;
+    justify-content: center;
+    position: absolute;
+    top: 0;
   }
 
 nav .title{
@@ -38,6 +40,7 @@ nav .title{
 
 nav ul {
     display: flex;
+    margin-left: 300px
 }
 
 nav ul li {
@@ -62,7 +65,7 @@ nav ul li {
 }
 
 .nav.dark-mode {
-    background-color: #000000;
+    background-color: #1a2d4c;
     color: #ffffff;
 }
 
@@ -96,11 +99,11 @@ nav ul li {
 }
 
 nav ul li a:not(.active):hover{
-    background-color: #59625a ;
+    background-color: #729eca ;
 }
 
 nav ul li:not(.active):hover{
-    background-color: #59625a ;
+    background-color: #729eca ;
 }
 
 
